# rpv

./: .gitignore  AUDIT.md  CLEANUP_REPORT.md  COMPLETION_SUMMARY.md  CONSOLIDATION_SUMMARY.md  Cargo.toml  DEPLOYMENT_STATUS.md  FINAL_STATUS.md  FINAL_STATUS.txt  IMPLEMENTATION_COMPLETE.md  INSTALLER_DESIGN.md  INSTALLER_GUIDE.md  PUSH_SUMMARY.md  README.md  README_CONSOLIDATION.md  README_RPV.md  REPOSITORY_STATUS.md  SETUP_COMPLETE.md  SUMMARY.txt  TASK_COMPLETE.md  TASK_COMPLETION_SUMMARY.md  TASK_DONE.txt  TEST_PLAN_REAL_HARDWARE.md  VALIDATION_CHECKLIST.md  WIFI_STATUS_REPORT.md  diagnose.sh  rpv-quickstart.sh  run-cam.sh  run-ground.sh  session-ses_2462.md  setup-pi-hotspot.sh  verify-cam-deployment.sh
.config/rpv/: cam.toml  ground.toml
.github/workflows/: ci.yml
.kilo/plans/: 1777054472990-shiny-tiger.md
deploy/: install-cam.sh  install-common.sh  install-ground.sh
deploy/cam/: 10-rpv.network  rpv-cam-rpi5.service  rpv-cam.service  rpv-hostapd.conf  rpv-net-setup-pre.sh  rpv-net-setup.sh  rpv-net-teardown.sh
deploy/ground/: 10-rpv.network  rpv-ground.desktop  rpv-ground.service  rpv-net-setup-pre.sh  rpv-net-setup.sh  rpv-net-teardown.sh  rpv-wpa.conf
fuzz/: Cargo.toml
fuzz/fuzz_targets/: l2_parse.rs  nal_finder.rs  radiotap_parse.rs
rpv-cam/: Cargo.toml
rpv-cam/src/: config.rs  discover.rs  discovery.rs  fc.rs  lib.rs  link.rs  main.rs  main_rpi5.rs  rawsock.rs  udpsock.rs  video_tx.rs
rpv-cam/tests/: mavlink_loopback.rs
rpv-ground/: Cargo.toml  build.rs  install.sh  rpv-ground.service  rpv-westonsession.service  rpv-x11.service  start.sh  weston.ini  xorg.conf
rpv-ground/src/: config.rs  discovery.rs  gamepad.rs  link.rs  link_state.rs  main.rs  main_rpi5.rs  rawsock.rs  telemetry.rs
rpv-ground/src/rc/: joystick.rs
rpv-ground/src/video/: decoder.rs  receiver.rs
rpv-proto/: Cargo.toml
rpv-proto/src/: config.rs  discovery.rs  lib.rs  link.rs  rawsock_common.rs  rawsocket_base.rs  socket_trait.rs  tcpsock.rs  udpsock.rs
rpv-proto/tests/: discovery_test.rs  fec_roundtrip.rs  tcp_reconnect_test.rs
src/: main.rs  telemetry.rs
src/rc/: joystick.rs
src/video/: decoder.rs  receiver.rs
