[package]
name = "rpv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio         = { version = "1", features = ["net", "sync", "rt-multi-thread", "time", "signal"] }
egui          = "0.29"
eframe        = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts", "wayland", "x11", "accesskit"] }
egui-wgpu     = "0.29"
wgpu          = "22"

serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tracing       = "0.1"
tracing-subscriber = "0.3"
toml          = "0.8"
ctrlc         = "3"
