[package]
name = "rpv-cam"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpv-cam"
path = "src/main.rs"

[[bin]]
name = "rpv-cam-rpi5"
path = "src/main_rpi5.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
reed-solomon-erasure = { version = "6", features = ["simd-accel"] }
libc = "0.2"
crossbeam-channel = "0.5"
