[package]
name = "rpv-cam"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpv-cam"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
reed-solomon-erasure = { version = "6", features = ["simd-accel"] }
libc = "0.2"
crossbeam-channel = "0.5"
mavlink = { version = "0.17", features = ["common"] }
serialport = "4"
memchr = "2"
bytes = "1"
