[package]
name = "rpv-cam"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpv-cam"
path = "src/main.rs"

[dependencies]
rpv-proto = { path = "../rpv-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
reed-solomon-erasure = { version = "6", features = ["simd-accel"] }
libc = "0.2"
crossbeam-channel = "0.5"
mavlink = { version = "0.17", features = ["common"] }
serialport = { version = "4", default-features = false }
memchr = "2"
bytes = "1"
arc-swap = "1"
ffmpeg-sys-next = { version = "8", optional = true }

[features]
default = ["raw-sock", "udp-transport"]
raw-sock = []          # Raw 802.11 monitor mode
udp-transport = []     # UDP/IP transport
csi-cam = ["ffmpeg-sys-next"]           # Raspberry Pi Camera
usb-cam = ["ffmpeg-sys-next"]           # USB webcam
gamepad = []           # Gamepad/Joystick input (evdev)
